--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -163,3 +163,10 @@
 	background-size: cover;
 	background-position: center;
 }
+
+
+.login-modal2 {
+	background-image: url("~@/assets/images/bg.png");
+	background-size: cover;
+	background-position: center;
+}
