--- a/src/assets/scss/pages/_dashboard.scss
+++ b/src/assets/scss/pages/_dashboard.scss
@@ -118,6 +118,11 @@
   background-size: cover;
 }
 
+.bg-marketplace2 {
+  background-image: url(~@/assets/images/galaxy/img-5.png);
+  background-size: cover;
+}
+
 .dash-countdown {
   .countdownlist {
     .count-num {
