--- a/src/assets/scss/structure/_vertical.scss
+++ b/src/assets/scss/structure/_vertical.scss
@@ -513,8 +513,10 @@
             min-height: 1400px;
 
             .main-content {
-                margin-left: var(--#{$prefix}vertical-menu-width-sm);
+                // margin-left: var(--#{$prefix}vertical-menu-width-sm);
+                margin-left: 0;
             }
+                
         }
 
         #page-topbar {
